2008-08-21  Heikki Junnila  <hjunnila@users.sf.net>

	* main/inputmap.cpp:
	* main/inputmap.h:
	* main/vcslider.cpp:
	* main/vcslider.h:
	* main/vcsliderproperties.cpp:
	* main/vcsliderproperties.ui:

	Implemented preliminary input data acquisition to vcslider.
	
2008-08-18  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/hidinput/hideventdevice.cpp:

	Fixed a segfault in HID plugin deletion (app shutdown).

2008-08-18  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/common/qlcinplugin.h:
	* libs/hidinput/configurehidinput.cpp:
	* libs/hidinput/configurehidinput.h:
	* libs/hidinput/configurehidinput.ui:
	* libs/hidinput/hiddevice.cpp:
	* libs/hidinput/hiddevice.h:
	* libs/hidinput/hideventdevice.cpp:
	* libs/hidinput/hideventdevice.h:
	* libs/hidinput/hidinput.cpp:
	* libs/hidinput/hidinput.h:
	* main/inputmap.cpp:

	Added open() & close() calls to QLCInPlugin interface.

2008-08-17  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/common/qlcinplugin.h:
	* libs/common/qlctypes.h:
	* libs/hidinput/hidinput.cpp:
	* libs/hidinput/hidinput.h:
	* main/app.cpp:
	* main/dmxmap.cpp:
	* main/dmxmap.h:
	* main/inputmap.cpp:
	* main/inputmap.h:
	* main/inputmapeditor.cpp:
	* main/inputmapeditor.h:
	* main/inputpatcheditor.cpp:
	* main/inputpatcheditor.h:

	Fixes and updates to input universe mapping.
	
2008-08-16  Heikki Junnila  <ext-heikki.junnila@nokia.com>

	libs/midi-inout:
	libs/midiinput:
	
	Rename.

2008-08-15  Heikki Junnila  <ext-heikki.junnila@nokia.com>

	* fixtures/Robe-ClubScan-150CT.qxf:
	* fixtures/Robe-ClubScan-250CT.qxf:
	* fixtures/Robe-ClubSpot-150CT.qxf:
	* fixtures/Robe-ClubSpot-160CT.qxf:
	* fixtures/Robe-ClubSpot-250CT.qxf:
	* fixtures/Robe-ClubWash-250CT.qxf:
	* fixtures/Robe-ClubWash-300CT.qxf:
	* fixtures/fixtures.pro:

	Added some Robe fixtures.

2008-08-14  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/common/qlcinplugin.h:
	* libs/hidinput/configurehidinput.cpp:
	* libs/hidinput/hiddevice.cpp:
	* libs/hidinput/hiddevice.h: