@@ -23,10 +23,13 @@
 #include <QLineEdit>
 #include <QSpinBox>
 #include <QLabel>
+#include <QIcon>
 
+#include "common/qlcfixturemode.h"
 #include "common/qlcfixturedef.h"
 
 #include "fixtureproperties.h"
+#include "addfixture.h"
 #include "fixture.h"
 #include "app.h"
 #include "doc.h"
@@ -41,6 +44,9 @@ FixtureProperties::FixtureProperties(QWidget* parent, t_fixture_id fxi_id)
 	Fixture* fxi = _app->doc()->fixture(fxi_id);
 	Q_ASSERT(fxi != NULL);
 	m_fxi = fxi;
+	m_fixtureDef = m_fxi->fixtureDef();
+	m_fixtureMode = m_fxi->fixtureMode();
+	m_channels = m_fxi->channels();
 
 	// Name
 	m_nameEdit->setText(m_fxi->name());
@@ -55,6 +61,22 @@ FixtureProperties::FixtureProperties(QWidget* parent, t_fixture_id fxi_id)
 	// Universe
 	m_universeSpin->setRange(1, KUniverseCount);
 	m_universeSpin->setValue(m_fxi->universe() + 1);
+
+	// Make & Model
+	m_makeModelButton->setIcon(QIcon(":/edit.png"));
+	connect(m_makeModelButton, SIGNAL(clicked()),
+		this, SLOT(slotMakeModelClicked()));
+
+	if (m_fixtureDef != NULL && m_fixtureMode != NULL)
+	{
+		m_makeModelEdit->setText(QString("%1 - %2")
+					 .arg(m_fixtureDef->manufacturer())
+					 .arg(m_fixtureDef->model()));
+	}
+	else
+	{
+		m_makeModelEdit->setText("Generic - Dimmer");
+	}
 }
 
 FixtureProperties::~FixtureProperties()
@@ -65,6 +87,28 @@ void FixtureProperties::slotNameEdited(const QString& text)
 {
 	Q_ASSERT(m_fxi != NULL);
 	setWindowTitle(tr("Fixture properties - ") + text);
+}
+
+void FixtureProperties::slotMakeModelClicked()
+{
+	AddFixture af(this, m_fxi->fixtureDef());
+	af.setWindowTitle(tr("Change fixture definition"));
+	if (af.exec() == QDialog::Accepted)
+	{
+		m_fixtureDef = af.fixtureDef();
+		m_fixtureMode = af.mode();
+		m_channels = af.channels();
+		if (m_fixtureDef != NULL && m_fixtureMode != NULL)
+		{
+			m_makeModelEdit->setText(QString("%1 - %2")
+						 .arg(m_fixtureDef->manufacturer())
+						 .arg(m_fixtureDef->model()));
+		}
+		else
+		{
+			m_makeModelEdit->setText("Generic - Dimmer");
+		}
+	}
 }
 
 void FixtureProperties::accept()
@@ -79,6 +123,18 @@ void FixtureProperties::accept()
 
 	// Universe
 	m_fxi->setUniverse(m_universeSpin->value() - 1);
+
+	// Make & Model
+	if (m_fixtureDef == NULL && m_fixtureMode == NULL)
+	{
+		/* Generic dimmer */
+		m_fxi->setChannels(m_channels);
+	}
+	else if (m_fixtureDef != m_fxi->fixtureDef() ||
+		 m_fixtureMode != m_fxi->fixtureMode())
+	{
+		m_fxi->setFixtureDefinition(m_fixtureDef, m_fixtureMode);
+	}
 
 	QDialog::accept();
 }
